# fast-qwen

./: .gitignore  CMakeLists.txt  README.md  chat.py  compile.py  convert_gguf.py  engine.exp  engine.lib  main.cpp  model.json  test_prompt.py  test_suite.cu  test_suite.exp  test_suite.lib
build_output/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
include/: allocator.h  common.h
src/cpu/: fused_shared_expert.cpp  quip_unpack_avx2.cpp  worker_pool.cpp
src/cuda/: fused_attention_rotor.cu  fused_q4_to_fp32_gemv.cu  lm_head_gemv.cu  moe_router_pinned.cu  ssm_kernels.cu
src/pipeline/: orchestrator.cpp
